--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Mr Betteridge, Horrible Cop
+title: Mr Betteridge
 ---
 <div class="blurb">
 	<h1>Hi there, I'm David Betteridge!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p><a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
