--- a/index.html
+++ b/index.html
@@ -4,5 +4,27 @@ title: Mr Betteridge
 ---
 <div class="blurb">
 	<h1>Hi there, I'm David Betteridge!</h1>
+
+	<h2>Side Projects</h2>
+	I'm currently working on a mini blog series about using async/await in C#. I'm hoping to understand and cover from the
+	following points
+	<ul>
+		<li>The basics of calling asynchronous methods.</li>
+		<li>How to correctly call asynchronous methods.</li>
+		<li>Using them within the <b>await</b> keyword.</li>
+		<li>What does the magic <b>await</b> keyword actually do.</li>
+		<li>The maths behind composing tasks together</li>
+	</ul>
+	Still very much a work in progress, but there are articles there for you to read.
+
+	<h2>Running</h2>
+	My next race is the Hardmoors 50 in March, need to do some training....
+
+	<h2>Real Work - Proactis</h2>
+	Can't say too much but we are currently working on some exciting projects should have a big positive impact on the company.
+	
+	<h2>York Developers</h2>
+	The next York Code Dojo (in Feb) will be based around interview coding problems.
+
 	<p><a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
