--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@ layout: default
 title: Mr Betteridge
 ---
 <div class="blurb">
-	<h1>Hi there, I'm David Betteridge!</h1>
 
 	<h2>Side Projects</h2>
 	I'm currently working on a mini blog series about using async/await in C#. I'm hoping to understand and cover from the
@@ -21,10 +20,9 @@ title: Mr Betteridge
 	My next race is the Hardmoors 50 in March, need to do some training....
 
 	<h2>Real Work - Proactis</h2>
-	Can't say too much but we are currently working on some exciting projects should have a big positive impact on the company.
+	Can't say too much, but we are currently working on some exciting projects - these should have a big positive impact on the company.
 	
 	<h2>York Developers</h2>
 	The next York Code Dojo (in Feb) will be based around interview coding problems.
 
-	<p><a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
