--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Mr Betteridge
 <div class="blurb">
 
 	<h2>Side Projects</h2>
-	I'm currently working on a mini blog series about using async/await in C#. I'm hoping to understand and cover from the
+	I'm currently working on a mini blog series about using async/await in C#. I'm hoping to understand and cover the
 	following points
 	<ul>
 		<li>The basics of calling asynchronous methods.</li>
@@ -14,7 +14,7 @@ title: Mr Betteridge
 		<li>What does the magic <b>await</b> keyword actually do.</li>
 		<li>The maths behind composing tasks together</li>
 	</ul>
-	Still very much a work in progress, but there are articles there for you to read.
+	Still very much a work in progress, but there are the beginnings of some articles there for you to read.  Please let me know if I've completely misunderstood any topics!
 
 	<h2>Running</h2>
 	My next race is the Hardmoors 50 in March, need to do some training....
