--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@ title: Mr Betteridge
 	Can't say too much, but we are currently working on some exciting projects - these should have a big positive impact on the company.
 	
 	<h2>York Developers</h2>
-	The next York Code Dojo (in Feb) will be based around interview coding problems.
+	For the next York Code Dojo (in March) we will be looking at some Esoteric programming languages.
 
 </div><!-- /.blurb -->
