--- a/running/index.html
+++ b/running/index.html
@@ -3,16 +3,7 @@
     <head>
         <title>MyRuns</title>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
-        <style type='text/css'>body{margin:0;padding:0;overflow:hidden;font-family:'Segoe UI',Helvetica,Arial,Sans-Serif}</style>
-        <style>
-            .row {
-                display: flex;
-                }
-
-                .column {
-                flex: 90%;
-                } 
-        </style>
+        <link rel="stylesheet" type="text/css" href="running.css">
     </head>
     <body>
 
@@ -22,11 +13,11 @@
 
             <div class="column" id='printoutPanel'>
                 <ul>
-                <li><input type="checkbox">Pock To York</input></li>
+                <!-- <li><input type="checkbox">Pock To York</input></li>
                 <li><input type="checkbox">Foss Walk</input></li>
                 <li><input type="checkbox">Wolds Way (HM200 2017)</input></li>
                 <li><input type="checkbox">York to Doncaster (2018)</input></li>
-                <li><input type="checkbox">Leeds to York (2019)</input></li>
+                
                 <li><input type="checkbox">Meridium to Doncaster (Escape from Meridum 2017)</input></li>
                 <li><input type="checkbox">Malton to Hope (Convergent 2018)</input></li>
                 <li><input type="checkbox">Pennine Way (Spine Winter 2018)</input></li>
@@ -34,7 +25,9 @@
                 <li><input type="checkbox">Cleveland Way (Lots!)</input></li>
                 <li><input type="checkbox">Taburlar Hills (HM160)</input></li>
                 <li><input type="checkbox">Lyke Wake Walk (2017)</input></li>
-                <li><input type="checkbox">White Rose Ultra (3 Times)</input></li>
+                <li><input type="checkbox">White Rose Ultra (3 Times)</input></li> -->
+
+                <li><input type="checkbox">Leeds to York (Aire and Calder Navigation)</input></li>
                 <li><input type="checkbox">Gargrave To Leeds (Leeds-Liverpool Canal)</input></li>
             </ul>
             </div>
