--- a/running/index.html
+++ b/running/index.html
@@ -27,8 +27,8 @@
                 <li><input type="checkbox">Lyke Wake Walk (2017)</input></li>
                 <li><input type="checkbox">White Rose Ultra (3 Times)</input></li> -->
 
-                <li><input type="checkbox">Leeds to York (Aire and Calder Navigation)</input></li>
-                <li><input type="checkbox">Gargrave To Leeds (Leeds-Liverpool Canal)</input></li>
+                <li><input class="route" type="checkbox" value="Leeds_to_York.xml">Leeds to York (Aire and Calder Navigation)</input></li>
+                <li><input class="route" type="checkbox" value="Gargrave_to_Leeds_along_the_Leeds_Liverpool_Canal.xml">Gargrave To Leeds (Leeds-Liverpool Canal)</input></li>
             </ul>
             </div>
         </div>
