--- a/running/index.html
+++ b/running/index.html
@@ -16,8 +16,6 @@
                 <!-- <li><input type="checkbox">Pock To York</input></li>
                 <li><input type="checkbox">Foss Walk</input></li>
                 <li><input type="checkbox">Wolds Way (HM200 2017)</input></li>
-                <li><input type="checkbox">York to Doncaster (2018)</input></li>
-                
                 <li><input type="checkbox">Meridium to Doncaster (Escape from Meridum 2017)</input></li>
                 <li><input type="checkbox">Malton to Hope (Convergent 2018)</input></li>
                 <li><input type="checkbox">Pennine Way (Spine Winter 2018)</input></li>
@@ -25,10 +23,12 @@
                 <li><input type="checkbox">Cleveland Way (Lots!)</input></li>
                 <li><input type="checkbox">Taburlar Hills (HM160)</input></li>
                 <li><input type="checkbox">Lyke Wake Walk (2017)</input></li>
-                <li><input type="checkbox">White Rose Ultra (3 Times)</input></li> -->
-
-                <li><input class="route" type="checkbox" value="Leeds_to_York.xml">Leeds to York (Aire and Calder Navigation)</input></li>
-                <li><input class="route" type="checkbox" value="Gargrave_to_Leeds_along_the_Leeds_Liverpool_Canal.xml">Gargrave To Leeds (Leeds-Liverpool Canal)</input></li>
+                <!-- https://www.w3schools.com/colors/colors_picker.asp -->
+                <li><input class="route" type="checkbox" value="Leeds_to_York.xml" data-colour="#ff0000">Leeds to York (Aire and Calder Navigation)</input></li>
+                <li><input class="route" type="checkbox" value="Gargrave_to_Leeds.xml" data-colour="#ff4000">Gargrave To Leeds (Leeds-Liverpool Canal)</input></li>
+                <li><input class="route" type="checkbox" value="York_To_Doncaster.xml" data-colour="#ff8000">York To Doncaster (Sustrans Route)</input></li>
+                <li><input class="route" type="checkbox" value="White_Rose_Ultra.xml" data-colour="#ffbf00">White Rose Ultra (Three laps)</input></li>
+                <li><input class="route" type="checkbox" value="3_Peaks.xml" data-colour="#ffff00">3 Peaks</input></li>
             </ul>
             </div>
         </div>
