--- a/running/index.html
+++ b/running/index.html
@@ -13,22 +13,26 @@
 
             <div class="column" id='printoutPanel'>
                 <ul>
-                <!-- <li><input type="checkbox">Pock To York</input></li>
-                <li><input type="checkbox">Foss Walk</input></li>
-                <li><input type="checkbox">Wolds Way (HM200 2017)</input></li>
-                <li><input type="checkbox">Meridium to Doncaster (Escape from Meridum 2017)</input></li>
-                <li><input type="checkbox">Malton to Hope (Convergent 2018)</input></li>
-                <li><input type="checkbox">Pennine Way (Spine Winter 2018)</input></li>
-                <li><input type="checkbox">Bristol to London (KACA 2018)</input></li>
-                <li><input type="checkbox">Cleveland Way (Lots!)</input></li>
-                <li><input type="checkbox">Taburlar Hills (HM160)</input></li>
-                <li><input type="checkbox">Lyke Wake Walk (2017)</input></li>
                 <!-- https://www.w3schools.com/colors/colors_picker.asp -->
                 <li><input class="route" type="checkbox" value="Leeds_to_York.xml" data-colour="#ff0000">Leeds to York (Aire and Calder Navigation)</input></li>
                 <li><input class="route" type="checkbox" value="Gargrave_to_Leeds.xml" data-colour="#ff4000">Gargrave To Leeds (Leeds-Liverpool Canal)</input></li>
                 <li><input class="route" type="checkbox" value="York_To_Doncaster.xml" data-colour="#ff8000">York To Doncaster (Sustrans Route)</input></li>
                 <li><input class="route" type="checkbox" value="White_Rose_Ultra.xml" data-colour="#ffbf00">White Rose Ultra (Three laps)</input></li>
                 <li><input class="route" type="checkbox" value="3_Peaks.xml" data-colour="#ffff00">3 Peaks</input></li>
+                <li><input class="route" type="checkbox" value="Spine2018.xml" data-colour="#bfff00">Spine Race (2018)</input></li>
+                <li><input class="route" type="checkbox" value="Cleveland_Way.xml" data-colour="#80ff00">Cleveland Way (Lots of times)</input></li>
+                <li><input class="route" type="checkbox" value="EdaleSkyline.xml" data-colour="#40ff00">Edale Skyline</input></li>
+                <li><input class="route" type="checkbox" value="TabularHillsWalk.xml" data-colour="#00ff00">Tabular Hills Walk (Hardmoors 160)</input></li>
+                <li><input class="route" type="checkbox" value="Lyke_Wake_Challenge.xml" data-colour="#00ff40">Lyke Wake Challenge</input></li>
+                <li><input class="route" type="checkbox" value="Minster_Way.xml" data-colour="#00ff80">Minster Way (Pocklington to York)</input></li>
+                <li><input class="route" type="checkbox" value="Wolds_Way_Part_1.xml" data-colour="#00ffbf">Wolds Way Part 1 (Hull to Pocklington)</input></li>
+                <li><input class="route" type="checkbox" value="WoldsWay.xml" data-colour="#00ffff">Full Wolds Way (Hull to Filey)</input></li>
+                <li><input class="route" type="checkbox" value="Convergence.xml" data-colour="#00bfff">Convergence (Malton to Hope)</input></li>
+                <li><input class="route" type="checkbox" value="WetherbyToYork.xml" data-colour="#0080ff">Wetherby To York (Home from work)</input></li>
+                <br>
+                <li>TODO: Foss Walk #0040ff</li>
+                <li>TODO: Bristol to London (KACA 2018) #0000ff</li>
+                <li>TODO: Escape From Meridian (Meridian to Doncaster 2017) #4000ff</li>
             </ul>
             </div>
         </div>
