Added EFM and Foss

--- a/running/index.html
+++ b/running/index.html
@@ -30,9 +30,9 @@
                 <li><input class="route" type="checkbox" value="Convergence.xml" data-colour="#00bfff">Convergence (Malton to Hope)</input></li>
                 <li><input class="route" type="checkbox" value="WetherbyToYork.xml" data-colour="#0080ff">Wetherby To York (Home from work)</input></li>
                 <li><input class="route" type="checkbox" value="Kacr.xml" data-colour="#0000ff">Bristol to London (KACR 2018)</input></li>
-                <br>
-                <li>TODO: Foss Walk #0040ff</li>
-                <li>TODO: Escape From Meridian (Meridian to Doncaster 2017) #4000ff</li>
+
+                <li><input class="route" type="checkbox" value="efm_2017.xml" data-colour="#0040ff">Meridian to Doncaster (Escape From Meridian 2017)</input></li>
+                <li><input class="route" type="checkbox" value="Foss_Way.xml" data-colour="#4000ff">Foss Walk</input></li>
             </ul>
             </div>
         </div>
