--- a/running/index.html
+++ b/running/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MyRuns</title>
+        <title>MyRuns - David Betteridge</title>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
         <link rel="stylesheet" type="text/css" href="running.css">
     </head>
@@ -30,7 +30,6 @@
                 <li><input class="route" type="checkbox" value="Convergence.xml" data-colour="#00bfff">Convergence (Malton to Hope)</input></li>
                 <li><input class="route" type="checkbox" value="WetherbyToYork.xml" data-colour="#0080ff">Wetherby To York (Home from work)</input></li>
                 <li><input class="route" type="checkbox" value="Kacr.xml" data-colour="#0000ff">Bristol to London (KACR 2018)</input></li>
-
                 <li><input class="route" type="checkbox" value="efm_2017.xml" data-colour="#0040ff">Meridian to Doncaster (Escape From Meridian 2017)</input></li>
                 <li><input class="route" type="checkbox" value="Foss_Way.xml" data-colour="#4000ff">Foss Walk</input></li>
             </ul>
