--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ title: Mr Betteridge
 	Still very much a work in progress, but there are the beginnings of some articles there for you to read.  Please let me know if I've completely misunderstood any topics!
 
 	<h2>Running</h2>
-	My next race is the Hardmoors 50 in March, need to do some training....
+	My next race is the Hardmoors 110 in May, need to do some training....
 
 	<h2>Real Work - Proactis</h2>
 	Can't say too much, but we are currently working on some exciting projects - these should have a big positive impact on the company.
 	
 	<h2>York Developers</h2>
-	For the next York Code Dojo (in March) we will be looking at some Esoteric programming languages.
+	For the next York Code Dojo (in April) we will be looking at WebAssembly
 
 </div><!-- /.blurb -->
