Added select all

--- a/running/index.html
+++ b/running/index.html
@@ -12,6 +12,9 @@
             <div class="column" id='myMap' style='height: 100vh;'></div>
 
             <div class="column" id='printoutPanel'>
+
+                <input class="routeAll" type="checkbox" >Select All</input>
+
                 <ul>
                 <!-- https://www.w3schools.com/colors/colors_picker.asp -->
                 <li><input class="route" type="checkbox" value="Leeds_to_York.xml" data-colour="#ff0000">Leeds to York (Aire and Calder Navigation)</input></li>
