--- a/running/index.html
+++ b/running/index.html
@@ -13,7 +13,7 @@
 
             <div class="column" id='printoutPanel'>
 
-                <input class="routeAll" type="checkbox" >Select All</input>
+                <!-- <input class="routeAll" type="checkbox" >Select All</input> -->
 
                 <ul>
                 <!-- https://www.w3schools.com/colors/colors_picker.asp -->
