--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Mr Betteridge
 	My next race is the Hardmoors 110 in May, need to do some training....
 
 	<h2>Real Work - Proactis</h2>
-	Can't say too much, but we are currently working on some exciting projects - these should have a big positive impact on the company.
+	Currently working as the Technical Lead on the exciting <a href="https://www.proactis.com/uk/solutions/rethink-spend/spend-control/accelerated-payment-facility/">BePayd</a> project - this should have a big positive impact on the company.
 	
 	<h2>York Developers</h2>
 	For the next York Code Dojo (in April) we will be looking at WebAssembly
