--- a/running/index.html
+++ b/running/index.html
@@ -13,14 +13,14 @@
 
             <div class="column" id='printoutPanel'>
 
-                <!-- <input class="routeAll" type="checkbox" >Select All</input> -->
+                <input class="routeAll" type="checkbox">Select All</input>
 
                 <ul>
                 <!-- https://www.w3schools.com/colors/colors_picker.asp -->
                 <li><input class="route" type="checkbox" value="Leeds_to_York.xml" data-colour="#ff0000">Leeds to York (Aire and Calder Navigation)</input></li>
                 <li><input class="route" type="checkbox" value="Gargrave_to_Leeds.xml" data-colour="#ff4000">Gargrave To Leeds (Leeds-Liverpool Canal)</input></li>
                 <li><input class="route" type="checkbox" value="York_To_Doncaster.xml" data-colour="#ff8000">York To Doncaster (Sustrans Route)</input></li>
-                <li><input class="route" type="checkbox" value="White_Rose_Ultra.xml" data-colour="#ffbf00">White Rose Ultra (Three laps)</input></li>
+                <li><input class="route" type="checkbox" value="White_Rose_Ultra.xml" data-colour="#ffbf00">White Rose Ultra 100 Miles (Three laps of 30 + a bit)</input></li>
                 <li><input class="route" type="checkbox" value="3_Peaks.xml" data-colour="#ffff00">3 Peaks</input></li>
                 <li><input class="route" type="checkbox" value="Spine2018.xml" data-colour="#bfff00">Spine Race (2018)</input></li>
                 <li><input class="route" type="checkbox" value="Cleveland_Way.xml" data-colour="#80ff00">Cleveland Way (Lots of times)</input></li>
