--- a/running/index.html
+++ b/running/index.html
@@ -35,6 +35,7 @@
                 <li><input class="route" type="checkbox" value="Kacr.xml" data-colour="#0000ff">Bristol to London (KACR 2018)</input></li>
                 <li><input class="route" type="checkbox" value="efm_2017.xml" data-colour="#0040ff">Meriden to Doncaster (Escape From Meriden 2017)</input></li>
                 <li><input class="route" type="checkbox" value="Foss_Way.xml" data-colour="#4000ff">Foss Walk</input></li>
+                <li><input class="route" type="checkbox" value="1066.xml" data-colour="#8000ff">1066</input></li>
             </ul>
             </div>
         </div>
