--- a/running/index.html
+++ b/running/index.html
@@ -17,8 +17,8 @@
 
                 <ul>
                 <!-- https://www.w3schools.com/colors/colors_picker.asp -->
-                <li><input class="route" type="checkbox" value="Leeds_to_York.xml" data-colour="#ff0000">Leeds to York (Aire and Calder Navigation)</input></li>
-                <li><input class="route" type="checkbox" value="Gargrave_to_Leeds.xml" data-colour="#ff4000">Gargrave To Leeds (Leeds-Liverpool Canal)</input></li>
+                <li><input class="route" type="checkbox" value="Leeds_to_York.xml" data-colour="#ff0000">Liverpool to York (Aire and Calder Navigation)</input></li>
+                <li><input class="route" type="checkbox" value="leedsandliverpoolcanal.xml" data-colour="#ff4000">Liverpool To Leeds Canal Race</input></li>
                 <li><input class="route" type="checkbox" value="York_To_Doncaster.xml" data-colour="#ff8000">York To Doncaster (Sustrans Route)</input></li>
                 <li><input class="route" type="checkbox" value="White_Rose_Ultra.xml" data-colour="#ffbf00">White Rose Ultra 100 Miles (Three laps of 30 + a bit)</input></li>
                 <li><input class="route" type="checkbox" value="3_Peaks.xml" data-colour="#ffff00">3 Peaks</input></li>
