--- a/running/index.html
+++ b/running/index.html
@@ -17,7 +17,7 @@
 
                 <ul>
                 <!-- https://www.w3schools.com/colors/colors_picker.asp -->
-                <li><input class="route" type="checkbox" value="Leeds_to_York.xml" data-colour="#ff0000">Liverpool to York (Aire and Calder Navigation)</input></li>
+                <li><input class="route" type="checkbox" value="Leeds_to_York.xml" data-colour="#ff0000">Leeds to York (Aire and Calder Navigation)</input></li>
                 <li><input class="route" type="checkbox" value="leedsandliverpoolcanal.xml" data-colour="#ff4000">Liverpool To Leeds Canal Race</input></li>
                 <li><input class="route" type="checkbox" value="York_To_Doncaster.xml" data-colour="#ff8000">York To Doncaster (Sustrans Route)</input></li>
                 <li><input class="route" type="checkbox" value="White_Rose_Ultra.xml" data-colour="#ffbf00">White Rose Ultra 100 Miles (Three laps of 30 + a bit)</input></li>
