Update home page

--- a/index.html
+++ b/index.html
@@ -4,25 +4,16 @@ title: Mr Betteridge
 ---
 <div class="blurb">
 
+	<h2>YouTube</h2>
+	I've started recording a series of short videos relating to .NetCore programming.  These can be found on my <a href="https://www.youtube.com/channel/UC1OfNaKKT8O3ft0cQFnOJhg">YouTube channel.</a>
+
 	<h2>Side Projects</h2>
-	I'm currently working on a mini blog series about using async/await in C#. I'm hoping to understand and cover the
-	following points
-	<ul>
-		<li>The basics of calling asynchronous methods.</li>
-		<li>How to correctly call asynchronous methods.</li>
-		<li>Using them within the <b>await</b> keyword.</li>
-		<li>What does the magic <b>await</b> keyword actually do.</li>
-		<li>The maths behind composing tasks together</li>
-	</ul>
-	Still very much a work in progress, but there are the beginnings of some articles there for you to read.  Please let me know if I've completely misunderstood any topics!
+	In my spare time I'm working on `Project Venimus` which is a social platform for arranging community events and groups.  This is written in C# using TDD, .netcore 3.1 (and Razor Pages),  MongoDB for storage, Auth0 for authentication and built with Azure DevOps Pipelines and deployed on Azure using docker containers!
 
 	<h2>Running</h2>
-	My next race is the Hardmoors 110 in May, need to do some training....
+	My next race is the <a href="http://mudcrew.co.uk/event/the-arc-of-attrition/">The Arc Of Attrition</a>, at the end of Jan.
 
 	<h2>Real Work - Proactis</h2>
 	Currently working as the Technical Lead on the exciting <a href="https://www.proactis.com/uk/solutions/rethink-spend/spend-control/accelerated-payment-facility/">BePayd</a> project - this will have a big positive impact on the company.
-	
-	<h2>York Developers</h2>
-	For the next York Code Dojo (in April) we will be looking at WebAssembly
 
 </div><!-- /.blurb -->
