--- a/familybikerides/index.html
+++ b/familybikerides/index.html
@@ -18,9 +18,11 @@
                 <ul>
                 <!-- https://www.w3schools.com/colors/colors_picker.asp -->
                 <li><input class="route" type="checkbox" value="holtbyloop.gpx" data-colour="#ff0000">Holtby Loop</input></li>
-                <!-- <li><input class="route" type="checkbox" value="leedsandliverpoolcanal.xml" data-colour="#ff4000">Liverpool To Leeds Canal Race</input></li>
-                <li><input class="route" type="checkbox" value="York_To_Doncaster.xml" data-colour="#ff8000">York To Doncaster (Sustrans Route)</input></li>
-                <li><input class="route" type="checkbox" value="White_Rose_Ultra.xml" data-colour="#ffbf00">White Rose Ultra 100 Miles (Three laps of 30 + a bit)</input></li>
+                <li><input class="route" type="checkbox" value="ampleforth.xml" data-colour="#ff4000">Ampleforth Abbey</input></li>
+                <li><input class="route" type="checkbox" value="castlehoward.xml" data-colour="#ff8000">Castle Howard</input></li>
+                <li><input class="route" type="checkbox" value="kirkhampriory.xml" data-colour="#ffbf00">Kirkham Priory</input></li>
+
+                <!--
                 <li><input class="route" type="checkbox" value="3_Peaks.xml" data-colour="#ffff00">3 Peaks</input></li>
                 <li><input class="route" type="checkbox" value="Spine2018.xml" data-colour="#bfff00">Spine Race (2018)</input></li>
                 <li><input class="route" type="checkbox" value="Cleveland_Way.xml" data-colour="#80ff00">Cleveland Way (Lots of times)</input></li>
