Rename source files

--- a/familybikerides/index.html
+++ b/familybikerides/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Family Bike Rides - David Betteridge</title>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
-        <link rel="stylesheet" type="text/css" href="running.css">
+        <link rel="stylesheet" type="text/css" href="cycles.css">
     </head>
     <body>
 
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <script type='text/javascript' src='running.js'></script>
+        <script type='text/javascript' src='cycles.js'></script>
         <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?key=AoMlZ5rJywSt5Yeba_5_EpNUkmzPkotnJs5d0K5XC16zY6xxShIH4Ipny7xWCLFM &callback=loadMapScenario' async defer></script>
     </body>
 </html>
