--- a/familybikerides/index.html
+++ b/familybikerides/index.html
@@ -18,9 +18,9 @@
                 <ul>
                 <!-- https://www.w3schools.com/colors/colors_picker.asp -->
                 <li><input class="route" type="checkbox" value="holtbyloop.gpx" data-colour="#ff0000">Holtby Loop</input></li>
-                <li><input class="route" type="checkbox" value="ampleforth.xml" data-colour="#ff4000">Ampleforth Abbey</input></li>
-                <li><input class="route" type="checkbox" value="castlehoward.xml" data-colour="#ff8000">Castle Howard</input></li>
-                <li><input class="route" type="checkbox" value="kirkhampriory.xml" data-colour="#ffbf00">Kirkham Priory</input></li>
+                <li><input class="route" type="checkbox" value="ampleforth.gpx" data-colour="#ff4000">Ampleforth Abbey</input></li>
+                <li><input class="route" type="checkbox" value="castlehoward.gpx" data-colour="#ff8000">Castle Howard</input></li>
+                <li><input class="route" type="checkbox" value="kirkhampriory.gpx" data-colour="#ffbf00">Kirkham Priory</input></li>
 
                 <!--
                 <li><input class="route" type="checkbox" value="3_Peaks.xml" data-colour="#ffff00">3 Peaks</input></li>
