--- a/familybikerides/index.html
+++ b/familybikerides/index.html
@@ -21,11 +21,11 @@
                 <li><input class="route" type="checkbox" value="ampleforth.gpx" data-colour="#ff4000">Ampleforth Abbey</input></li>
                 <li><input class="route" type="checkbox" value="castlehoward.gpx" data-colour="#ff8000">Castle Howard</input></li>
                 <li><input class="route" type="checkbox" value="kirkhampriory.gpx" data-colour="#ffbf00">Kirkham Priory</input></li>
+                <li><input class="route" type="checkbox" value="malton.xml" data-colour="#ffff00">Malton</input></li>
+                <li><input class="route" type="checkbox" value="pocklington.xml" data-colour="#bfff00">Pocklington</input></li>
+                <li><input class="route" type="checkbox" value="wharrampercy.xml" data-colour="#80ff00">Wharram Percy</input></li>
 
                 <!--
-                <li><input class="route" type="checkbox" value="3_Peaks.xml" data-colour="#ffff00">3 Peaks</input></li>
-                <li><input class="route" type="checkbox" value="Spine2018.xml" data-colour="#bfff00">Spine Race (2018)</input></li>
-                <li><input class="route" type="checkbox" value="Cleveland_Way.xml" data-colour="#80ff00">Cleveland Way (Lots of times)</input></li>
                 <li><input class="route" type="checkbox" value="EdaleSkyline.xml" data-colour="#40ff00">Edale Skyline</input></li>
                 <li><input class="route" type="checkbox" value="TabularHillsWalk.xml" data-colour="#00ff00">Tabular Hills Walk (Hardmoors 160)</input></li>
                 <li><input class="route" type="checkbox" value="Lyke_Wake_Challenge.xml" data-colour="#00ff40">Lyke Wake Challenge</input></li>
