--- a/familybikerides/index.html
+++ b/familybikerides/index.html
@@ -21,9 +21,9 @@
                 <li><input class="route" type="checkbox" value="ampleforth.gpx" data-colour="#ff4000">Ampleforth Abbey</input></li>
                 <li><input class="route" type="checkbox" value="castlehoward.gpx" data-colour="#ff8000">Castle Howard</input></li>
                 <li><input class="route" type="checkbox" value="kirkhampriory.gpx" data-colour="#ffbf00">Kirkham Priory</input></li>
-                <li><input class="route" type="checkbox" value="malton.xml" data-colour="#ffff00">Malton</input></li>
-                <li><input class="route" type="checkbox" value="pocklington.xml" data-colour="#bfff00">Pocklington</input></li>
-                <li><input class="route" type="checkbox" value="wharrampercy.xml" data-colour="#80ff00">Wharram Percy</input></li>
+                <li><input class="route" type="checkbox" value="malton.gpx" data-colour="#ffff00">Malton</input></li>
+                <li><input class="route" type="checkbox" value="pocklington.gpx" data-colour="#bfff00">Pocklington</input></li>
+                <li><input class="route" type="checkbox" value="wharrampercy.gpx" data-colour="#80ff00">Wharram Percy</input></li>
 
                 <!--
                 <li><input class="route" type="checkbox" value="EdaleSkyline.xml" data-colour="#40ff00">Edale Skyline</input></li>
