--- a/familybikerides/index.html
+++ b/familybikerides/index.html
@@ -25,11 +25,13 @@
                 <li><input class="route" type="checkbox" value="pocklington.gpx" data-colour="#bfff00">Pocklington</input></li>
                 <li><input class="route" type="checkbox" value="wharrampercy.gpx" data-colour="#80ff00">Wharram Percy</input></li>
 
+                <li><input class="route" type="checkbox" value="acastermalbis.gpx" data-colour="#40ff00">Acaster Malbis</input></li>
+                <li><input class="route" type="checkbox" value="tomoorlands.gpx" data-colour="#00ff00">To Moorlands</input></li>
+                <li><input class="route" type="checkbox" value="frommoorlands.gpx" data-colour="#00ff40">From Moorlands</input></li>
+                <li><input class="route" type="checkbox" value="university.gpx" data-colour="#00ff80">University</input></li>
+
                 <!--
-                <li><input class="route" type="checkbox" value="EdaleSkyline.xml" data-colour="#40ff00">Edale Skyline</input></li>
-                <li><input class="route" type="checkbox" value="TabularHillsWalk.xml" data-colour="#00ff00">Tabular Hills Walk (Hardmoors 160)</input></li>
-                <li><input class="route" type="checkbox" value="Lyke_Wake_Challenge.xml" data-colour="#00ff40">Lyke Wake Challenge</input></li>
-                <li><input class="route" type="checkbox" value="Minster_Way.xml" data-colour="#00ff80">Minster Way (Pocklington to York)</input></li>
+                
                 <li><input class="route" type="checkbox" value="Wolds_Way_Part_1.xml" data-colour="#00ffbf">Wolds Way Part 1 (Hull to Pocklington)</input></li>
                 <li><input class="route" type="checkbox" value="WoldsWay.xml" data-colour="#00ffff">Full Wolds Way (Hull to Filey)</input></li>
                 <li><input class="route" type="checkbox" value="Convergence.xml" data-colour="#00bfff">Convergence (Malton to Hope)</input></li>
