--- a/familybikerides/index.html
+++ b/familybikerides/index.html
@@ -29,12 +29,11 @@
                 <li><input class="route" type="checkbox" value="tomoorlands.gpx" data-colour="#00ff00">To Moorlands</input></li>
                 <li><input class="route" type="checkbox" value="frommoorlands.gpx" data-colour="#00ff40">From Moorlands</input></li>
                 <li><input class="route" type="checkbox" value="university.gpx" data-colour="#00ff80">University</input></li>
+                <li><input class="route" type="checkbox" value="stillingfleet.gpx" data-colour="#00ffbf">Stillingfleet</input></li>
+                <li><input class="route" type="checkbox" value="stamfordbridge.gpx" data-colour="#00ffff">Stamford Bridge</input></li>
+                <li><input class="route" type="checkbox" value="beningbroughhall.gpx" data-colour="#00bfff">Beningbrough Hall</input></li>
 
                 <!--
-                
-                <li><input class="route" type="checkbox" value="Wolds_Way_Part_1.xml" data-colour="#00ffbf">Wolds Way Part 1 (Hull to Pocklington)</input></li>
-                <li><input class="route" type="checkbox" value="WoldsWay.xml" data-colour="#00ffff">Full Wolds Way (Hull to Filey)</input></li>
-                <li><input class="route" type="checkbox" value="Convergence.xml" data-colour="#00bfff">Convergence (Malton to Hope)</input></li>
                 <li><input class="route" type="checkbox" value="WetherbyToYork.xml" data-colour="#0080ff">Wetherby To York (Home from work)</input></li>
                 <li><input class="route" type="checkbox" value="Kacr.xml" data-colour="#0000ff">Bristol to London (KACR 2018)</input></li>
                 <li><input class="route" type="checkbox" value="efm_2017.xml" data-colour="#0040ff">Meriden to Doncaster (Escape From Meriden 2017)</input></li>
