--- a/familybikerides/index.html
+++ b/familybikerides/index.html
@@ -32,10 +32,10 @@
                 <li><input class="route" type="checkbox" value="stillingfleet.gpx" data-colour="#00ffbf">Stillingfleet</input></li>
                 <li><input class="route" type="checkbox" value="stamfordbridge.gpx" data-colour="#00ffff">Stamford Bridge</input></li>
                 <li><input class="route" type="checkbox" value="beningbroughhall.gpx" data-colour="#00bfff">Beningbrough Hall</input></li>
-
+                <li><input class="route" type="checkbox" value="skipwithcommon.gpx" data-colour="#0080ff">Skipwith Common</input></li>
+                <li><input class="route" type="checkbox" value="wetherby.gpx" data-colour="#0000ff">Wetherby/Aldwark Bridge</input></li>
+                
                 <!--
-                <li><input class="route" type="checkbox" value="WetherbyToYork.xml" data-colour="#0080ff">Wetherby To York (Home from work)</input></li>
-                <li><input class="route" type="checkbox" value="Kacr.xml" data-colour="#0000ff">Bristol to London (KACR 2018)</input></li>
                 <li><input class="route" type="checkbox" value="efm_2017.xml" data-colour="#0040ff">Meriden to Doncaster (Escape From Meriden 2017)</input></li>
                 <li><input class="route" type="checkbox" value="Foss_Way.xml" data-colour="#4000ff">Foss Walk</input></li>
                 <li><input class="route" type="checkbox" value="1066.xml" data-colour="#8000ff">1066</input></li>
