Update home page

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@ title: Mr Betteridge
 <div class="blurb">
 
 	<h2>YouTube</h2>
-	I've started recording a series of short videos relating to .NetCore programming.  These can be found on my <a href="https://www.youtube.com/channel/UC1OfNaKKT8O3ft0cQFnOJhg">YouTube channel.</a>
+	I've recently completed recording a series of short videos demonstrating how to write a compile for bf.net language using C#.  These can be found on my <a href="https://www.youtube.com/channel/UC1OfNaKKT8O3ft0cQFnOJhg">YouTube channel.</a>
+
+	<h2>Running</h2>
+	My next race is the <a href="https://www.hardmoors110.org.uk/hardwolds-80/">The Hardwolds 80</a>, at the end of November.
 
 	<h2>Side Projects</h2>
 	In my spare time I'm working on `Project Venimus` which is a social platform for arranging community events and groups.  This is written in C# using TDD, .netcore 3.1 (and Razor Pages),  MongoDB for storage, Auth0 for authentication and built with Azure DevOps Pipelines and deployed on Azure using docker containers!
 
-	<h2>Running</h2>
-	My next race is the <a href="http://mudcrew.co.uk/event/the-arc-of-attrition/">The Arc Of Attrition</a>, at the end of Jan.
-
 	<h2>Real Work - Proactis</h2>
-	Currently working as the Technical Lead on the exciting <a href="https://www.proactis.com/uk/solutions/rethink-spend/spend-control/accelerated-payment-facility/">BePayd</a> project - this will have a big positive impact on the company.
+	Currently working as the Technical Lead on the exciting <a href="https://www.bepayd.com/">BePayd</a> project - this will have a big positive impact on the company.
 
 </div><!-- /.blurb -->
