--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Mr Betteridge
 <div class="blurb">
 
 	<h2>YouTube</h2>
-	I've recently completed recording a series of short videos demonstrating how to write a compile for bf.net language using C#.  These can be found on my <a href="https://www.youtube.com/channel/UC1OfNaKKT8O3ft0cQFnOJhg">YouTube channel.</a>
+	I've recently completed recording a series of short videos demonstrating how to write a compiler for bf.net language using C#.  These can be found on my <a href="https://www.youtube.com/channel/UC1OfNaKKT8O3ft0cQFnOJhg">YouTube channel.</a>
 
 	<h2>Running</h2>
 	My next race is the <a href="https://www.hardmoors110.org.uk/hardwolds-80/">The Hardwolds 80</a>, at the end of November.
