--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,7 +28,7 @@
 
             <article class="content">
                 <div class="content-overlay"></div>
-                <img class="content-image" src="Tetris.JPG" alt="" />
+                <img class="content-image" src="tetris.JPG" alt="" />
                 <div class="content-details fadeIn-bottom">
                     <h2 class"content-title">Classic Tetris Game</h2>
                     <p class="content-text">The classic game of Tetris written with C# WinForms</p>
@@ -58,7 +58,7 @@
 
             <article class="content">
                 <div class="content-overlay"></div>
-                <img class="content-image" src="snake.JPG" alt="" />
+                <img class="content-image" src="snake.jpg" alt="" />
                 <div class="content-details fadeIn-bottom">
                     <h2 class"content-title">ASCII Snake Game</h2>
                     <p class="content-text">The snake game written in TDD as preparation for a York Code Dojo.</p>
