--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -58,7 +58,7 @@
 
             <article class="content">
                 <div class="content-overlay"></div>
-                <img class="content-image" src="snake.jpg" alt="" />
+                <img class="content-image" src="snake.JPG" alt="" />
                 <div class="content-details fadeIn-bottom">
                     <h2 class"content-title">ASCII Snake Game</h2>
                     <p class="content-text">The snake game written in TDD as preparation for a York Code Dojo.</p>
@@ -67,7 +67,7 @@
 
             <article class="content">
                 <div class="content-overlay"></div>
-                <img class="content-image" src="2048.JPG" alt="" />
+                <img class="content-image" src="2048.jpg" alt="" />
                 <div class="content-details fadeIn-bottom">
                     <h2 class"content-title">2048</h2>
                     <p class="content-text">The 2048 game written in C# WinForms</p>
