--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@ title: Mr Betteridge
 ---
 <div class="blurb">
 
+	<h2>New Job</h2>
+	I've recently joined <a href="https://www.hivemap.io/">Hivemap</a> as their lead software architect.  It's a busy time as I'm learning both a new business domain and technologies (Python, AWS etc)
+
+	<h2>Running</h2>
+	If all goes to plan then my next race is the <a href="https://www.hardmoors110.org.uk/hardmoors-160/">The Hardmoors 160</a>, at the end of May.
+
+
 	<h2>YouTube</h2>
 	I've recently completed recording a series of short videos demonstrating how to write a compiler for bf.net language using C#.  These can be found on my <a href="https://www.youtube.com/channel/UC1OfNaKKT8O3ft0cQFnOJhg">YouTube channel.</a>
 
-	<h2>Running</h2>
-	My next race is the <a href="https://www.hardmoors110.org.uk/hardwolds-80/">The Hardwolds 80</a>, at the end of November.
 
 	<h2>Side Projects</h2>
 	In my spare time I'm working on `Project Venimus` which is a social platform for arranging community events and groups.  This is written in C# using TDD, .netcore 3.1 (and Razor Pages),  MongoDB for storage, Auth0 for authentication and built with Azure DevOps Pipelines and deployed on Azure using docker containers!
 
-	<h2>Real Work - Proactis</h2>
-	Currently working as the Technical Lead on the exciting <a href="https://www.bepayd.com/">BePayd</a> project - this will have a big positive impact on the company.
+	<h2>Proactis</h2>
+	My previous job (of many years) was working at Proactis Ltd.  My final project was working on the <a href="https://www.bepayd.com/">BePayd</a>  product.   
 
 </div><!-- /.blurb -->
