Add white horse

--- a/familybikerides/index.html
+++ b/familybikerides/index.html
@@ -35,9 +35,9 @@
                 <li><input class="route" type="checkbox" value="skipwithcommon.gpx" data-colour="#0080ff">Skipwith Common</input></li>
                 <li><input class="route" type="checkbox" value="wetherby.gpx" data-colour="#0000ff">Wetherby/Aldwark Bridge</input></li>
                 <li><input class="route" type="checkbox" value="buttercrambe.gpx" data-colour="#0040ff">Howsham Mill via Buttercrambe</input></li>
+                <li><input class="route" type="checkbox" value="whitehorse.gpx" data-colour="#4000ff">Helmsley via White Horse</input></li>
                 <!--
                 
-                <li><input class="route" type="checkbox" value="Foss_Way.xml" data-colour="#4000ff">Foss Walk</input></li>
                 <li><input class="route" type="checkbox" value="1066.xml" data-colour="#8000ff">1066</input></li>
                 <li><input class="route" type="checkbox" value="ArcOfAttrition.xml" data-colour="#8000ff">Arc of Attrition</input></li> -->
             </ul>
